# immich-convert-originals

./: .dockerignore  .env.example  .gitignore  DOCKER_LICENSES.md  Dockerfile  Makefile  NOTICE  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
app/: __main__.py  cli.py  config.py  immich_api.py  interactive.py  main.py  state.py  transcode.py
backend/: requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: asset_outcome.py  run.py  schemas.py  settings.py
backend/app/routes/: albums.py  assets.py  runs.py  settings.py  websocket.py
backend/app/services/: immich_client.py  lifecycle.py  run_queue.py  run_service.py  transcode.py  websocket_manager.py
backend/tests/: conftest.py  test_database.py  test_immich_client.py  test_lifecycle.py  test_routes_assets.py  test_routes_runs.py  test_routes_settings.py  test_run_queue.py  test_run_service.py  test_transcode.py  test_transcode_subprocess.py
backend/tests/integration/: Dockerfile.runner  conftest.py  seeder.py  test_end_to_end.py  upload-fault-compose.yml
backend/tests/integration/fixtures/: already.jxl
backend/tests/integration/upload-fault-proxy/: nginx.conf
frontend/: index.html
frontend/css/: styles.css
frontend/js/: active-run.js  api.js  app.js  asset-browser.js  format-utils.js  run-history.js  run-panel.js  settings-fields.js  settings-panel.js  websocket-client.js
tests/: test_cli.py  test_config.py  test_immich_api.py  test_interactive.py  test_main.py  test_main_module.py  test_main_orchestration.py  test_state.py  test_transcode.py  test_transcode_subprocess.py
tests/integration/: Dockerfile.runner  conftest.py  docker-compose.test.yml  seeder.py  test_end_to_end.py
