[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "immich-convert-originals"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "responses>=0.25.0",
    "ruff>=0.15.0",
    "mypy>=1.20.1",
    "types-requests>=2.33.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term --cov-report=xml"
markers = [
    "integration: end-to-end tests against real Immich",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py313"
include = ["app/**/*.py", "tests/**/*.py"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
explicit_package_bases = true
