[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "immich-convert-originals"
version = "1.1.1"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "responses>=0.26.0",
    "ruff>=0.15.12",
    "mypy>=2.0.0",
    "types-requests>=2.33.0.20260513",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term --cov-report=xml"
markers = [
    "integration: end-to-end tests against real Immich",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py313"
include = ["app/**/*.py", "tests/**/*.py"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
explicit_package_bases = true
